--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -58,18 +58,6 @@
     text-align: center;
 }
 
-.Warning {
-    display: none;
-    margin: 0 auto;
-    width: 18rem;
-    padding: 1rem;
-    margin-bottom: 2.5rem;
-    background-color: rgba(218, 165, 32, 0.9);
-    color: white;
-    text-align: center;
-    border-radius: 5px;
-}
-
 .SearchBar-submit button {
     border: 0;
     border-radius: 4px;
@@ -86,18 +74,21 @@
     transition: ease-in 0.3s;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
     .SearchBar-sort-options {
-        margin-top: 6rem;
+        margin-top: 4rem;
     }
 
     .SearchBar-sort-options ul {
+        margin-top: 3rem;
         justify-content: center;
     }
 
     .SearchBar-fields {
         flex-direction: column;
         align-items: center;
+        margin-bottom: 1rem;
+        margin-top: 2.5rem;
     }
 
     .SearchBar-fields input {
@@ -106,6 +97,32 @@
     }
 
     .SearchBar-submit {
-        margin-bottom: 2rem;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .SearchBar-sort-options {
+        margin-top: 5rem;
+    }
+
+    .SearchBar-sort-options ul {
+        margin-top: 5rem;
+        justify-content: center;
+    }
+
+    .SearchBar-fields {
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem auto;
+    }
+
+    .SearchBar-fields input {
+        margin: .5rem auto;
+    }
+
+    .SearchBar-submit {
+        margin: 3rem auto;
     }
 }
