--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
         monospace;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1199px) {
     body {
         background-size: auto;
     }
